fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,7 +116,7 @@ h2::before {
 }
 
 body::-webkit-scrollbar {
-  width: 5px;
+  width: 8px;
 }
 
 body::-webkit-scrollbar-track {
